--- a/tasks/templates/tasks/index.html
+++ b/tasks/templates/tasks/index.html
@@ -1,14 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    {% for task in taks%}
-        {{task}}
-    {% endfor%}
-</body>
-</html>
+  {% extends "tasks/layout.html"%}
+
+  {% block petrus %}
+  <h1>Tasks</h1>
+  <ul>
+    {% for task in tasks%}
+        <li>{{task}}</li>
+    {% endfor%} 
+
+  </ul>
+  <a href="{% url 'tasks:add'%}">Add a New Task</a>
+
+  {% endblock %}
